# hf-agents-course_final-assignment

./: .gitignore  app.py  config.yaml  create_folder_structure.py  generate_test_data.py  generate_test_image.py  local_test.py  pyproject.toml  requirements.txt  testing.ipynb
src/gaia_agent/: agent_core.py  api_integration.py  config.py  config_loader.py  eval_questions.json  llm_config.py  logger_config.py  prompts.py  tools.py
src/gaia_agent/tools/: __init__.py  analysis_tools.py  base_tool.py  file_tools.py  misc_tools.py  retriever_tool.py  search_tools.py
src/gaia_test/data/: sample_csv_file.csv  sample_text_file.txt  sample_xlsx_file.xlsx
