[build-system]
# Specifies build tool requirements (standard for setuptools)

# Build system configuration (required by PEP 517/518)
# Tells tools like pip and uv how to build your project if it needs building
# (even simple projects need this section)
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# PEP 621 metadata
name = "hf-gaia-agent"
version = "0.1.0"
description = "A LangGraph agent using Gemini and various tools to tackle the GAIA benchmark."
authors = [
    { name = "Ahsanul Habib", email = "a.habib.cuet@gmail.com" }, # Replace with your details
]
readme = "README.md"
requires-python = ">=3.9" # Minimum Python version
license = { text = "MIT" } # Or choose another license like Apache-2.0
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime dependencies - These are needed for the agent and app to run
dependencies = [
    "langchain>=0.1.0",              # Core LangChain library
    "langgraph>=0.0.30",             # LangGraph framework
    "langchain-google-genai>=1.0.0", # Gemini integration
    "langchain-groq>=0.1.0",         # Groq integration (optional LLM)
    "langchain-community>=0.0.20",   # Community tools and integrations
    "langchainhub",                  # For pulling prompts/agents if needed later
    "langchain-experimental",        # For PythonREPLTool
    "streamlit>=1.20.0",             # For the web UI (app.py)
    "gradio>=4.0.0",                 # For the web UI (app.py)
    "requests>=2.25.0",              # For downloading files (download_file_from_url tool)
    "pandas>=1.3.0",                 # For CSV/Excel analysis tools
    "openpyxl>=3.0.0",               # Required by pandas for reading/writing .xlsx files
    "Pillow>=9.0.0",                 # For image processing (extract_text_from_image tool)
    "pytesseract>=0.3.8",            # For OCR - requires Tesseract engine installed separately
    "yt-dlp>=2023.0.0",              # For YouTube metadata tool
    "wikipedia>=1.4.0",              # For Wikipedia search tool
    "beautifulsoup4>=4.9.0",         # Dependency for Wikipedia tool
    "google-generativeai>=0.4.0",    # Underlying Gemini library used by langchain-google-genai
    "groq>=0.4.0",                   # Underlying Groq library used by langchain-groq
    "huggingface-hub>=0.20.0",       # For loading models from Hugging Face
    "openai>=0.27.0",                # For OpenAI API (if used)
    "duckduckgo-search>=4.0.0",      # Fallback search & used by some tools
    "lark-parser",                   # Often needed by PythonREPLTool
    "tavily-python>=0.3.0",          # Preferred search tool (requires API key)
]

# Optional dependencies (e.g., for development, testing)
# Install these using 'uv pip install .[dev]'
[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.0", # For loading .env file in local scripts (local_test.py)
    # "pytest>=7.0.0",      # Uncomment if you plan to add pytest tests
    # "pytest-cov",         # Uncomment for test coverage
    # "ruff",               # Uncomment to add a linter/formatter
]

# Optional: Project URLs (useful if you publish to PyPI or share widely)
[project.urls]
# Homepage = "https://github.com/your_username/gaia-agent-uv" # Example: Link to your repo
# Repository = "https://github.com/your_username/gaia-agent-uv" # Example: Link to your repo
